Security: Update .gitignore and .env.example template

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,31 @@
+# Django
 SECRET_KEY=your-secret-key-here
-DEBUG=True
+DEBUG=False
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database
-DATABASE_URL=sqlite:///db.sqlite3
+DATABASE_URL=postgresql://user:password@localhost:5432/recall_db
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
 
-# AWS Configuration
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
 AWS_REGION=us-east-1
 
-# AWS Cognito
-COGNITO_USER_POOL_ID=your-user-pool-id
+# Cognito
+COGNITO_USER_POOL_ID=your-pool-id
 COGNITO_CLIENT_ID=your-client-id
 
-# Vector Database
+# APIs
+ANTHROPIC_API_KEY=your-anthropic-key
+RESEND_API_KEY=your-resend-key
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
+
+# Cache
 CHROMA_PERSIST_DIRECTORY=./chroma_db
+HUGGINGFACE_HUB_CACHE=./cache/huggingface
+TRANSFORMERS_CACHE=./cache/transformers
