--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "extends": ["react-app", "react-app/jest"],
   "rules": {
-    "no-unused-vars": "warn",
-    "react-hooks/exhaustive-deps": "warn",
-    "no-dupe-keys": "warn"
+    "no-unused-vars": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-dupe-keys": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
