--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://your-backend-url.vercel.app
+REACT_APP_API_URL=https://recall-backend-4hok.onrender.com
+REACT_APP_BACKEND_URL=https://recall-backend-4hok.onrender.com
