--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
-Django==4.2.7
+Django==4.2.10
+asgiref==3.7.1
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 PyJWT==2.8.0
 python-decouple==3.8
 celery==5.3.4
 redis==5.0.1
-anthropic==0.75.0
+anthropic==0.28.0
 psycopg2-binary==2.9.9
 cryptography==41.0.7
 dj-database-url==2.1.0
@@ -21,3 +22,24 @@ channels==4.0.0
 channels-redis==4.1.0
 daphne==4.0.0
 rank-bm25==0.2.2
+django-ratelimit==4.1.0
+django-audit-log==0.7.0
+sentence-transformers==2.2.2
+numpy==1.24.3
+scipy==1.11.1
+scikit-learn==1.3.0
+pydantic==1.10.13
+drf-spectacular==0.26.5
+django-extensions==3.2.3
+faker==19.2.0
+factory-boy==3.3.0
+pytest==7.4.0
+pytest-django==4.5.2
+pytest-cov==4.1.0
+locust==2.15.1
+opentelemetry-api==1.20.0
+opentelemetry-sdk==1.20.0
+opentelemetry-instrumentation-django==0.41b0
+opentelemetry-exporter-jaeger==1.20.0
+python-json-logger==2.0.7
+reportlab==4.0.9
