--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -1,5 +1,44 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-python-decouple==3.8
-PyJWT==2.8.0
+Django>=4.2.10
+djangorestframework>=3.14.0
+django-cors-headers>=4.3.1
+PyJWT>=2.8.0
+python-decouple>=3.8
+celery>=5.3.4
+redis>=5.0.1
+anthropic>=0.28.0
+psycopg2-binary
+cryptography>=41.0.7
+dj-database-url>=2.1.0
+djangorestframework-simplejwt>=5.3.1
+gunicorn>=21.2.0
+boto3>=1.34.0
+Pillow>=10.1.0
+django-storages>=1.14.2
+resend>=0.8.0
+cloudinary>=1.41.0
+django-cloudinary-storage>=0.3.0
+channels>=4.0.0
+channels-redis>=4.1.0
+daphne>=4.0.0
+rank-bm25>=0.2.2
+django-ratelimit>=4.1.0
+django-audit-log>=0.7.0
+sentence-transformers>=2.2.2
+numpy>=1.24.3
+scipy>=1.11.1
+scikit-learn>=1.3.0
+pydantic>=1.10.13
+drf-spectacular>=0.26.5
+django-extensions>=3.2.3
+faker>=19.2.0
+factory-boy>=3.3.0
+pytest>=7.4.0
+pytest-django>=4.5.2
+pytest-cov>=4.1.0
+locust>=2.15.1
+opentelemetry-api>=1.20.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-instrumentation-django>=0.41b0
+opentelemetry-exporter-jaeger>=1.20.0
+python-json-logger>=2.0.7
+reportlab>=4.0.9
