--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --bind :8000 --workers 3 recall.wsgi:application
-worker: celery -A recall worker --loglevel=info
+web: daphne -b 0.0.0.0 -p $PORT config.asgi:application
+worker: celery -A config worker --loglevel=info
