--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: recall-backend
     env: python
     buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
-    startCommand: gunicorn recall.wsgi:application
+    startCommand: daphne -b 0.0.0.0 -p $PORT config.asgi:application
     envVars:
       - key: DATABASE_URL
         value: postgresql://neondb_owner:npg_TBtxv7d8LAEs@ep-rough-thunder-a44a4ps0-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
