--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==4.3.0
 psycopg2-binary==2.9.11
 daphne==4.2.1
 channels==4.3.2
+channels-redis==4.1.0
 anthropic==0.83.0
 stripe==14.3.0
 dj-database-url==3.1.2
@@ -18,3 +19,5 @@ redis==5.0.1
 python-decouple==3.8
 boto3==1.35.0
 Pillow==11.1.0
+requests==2.31.0
+reportlab==4.0.7
