--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,14 @@
     "date-fns": "^2.29.3",
     "lucide-react": "^0.562.0",
     "postcss": "^8.4.21",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.2.7"
   },
   "scripts": {
