--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Recall",
-  "name": "Recall - Team Decision Tracker",
-  "description": "Track decisions, manage sprints, and collaborate with your team",
+  "short_name": "Knowledgr",
+  "name": "Knowledgr - Knowledge-First Collaboration",
+  "description": "Knowledge management, decisions, and team collaboration platform",
   "icons": [
     {
       "src": "/favicon.ico",
