--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.562.0",
     "postcss": "^8.4.21",
     "quill": "^2.0.3",
