--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,22 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/((?!sitemap\.xml|robots\.txt|.*\\.[a-zA-Z0-9]+$).*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/sitemap.xml",
-      "headers": [
-        { "key": "Content-Type", "value": "application/xml; charset=utf-8" }
-      ]
-    },
-    {
-      "source": "/robots.txt",
-      "headers": [
-        { "key": "Content-Type", "value": "text/plain; charset=utf-8" }
-      ]
-    }
+    { "source": "/((?!sitemap.xml|robots.txt|manifest.json|static/.*).*)", "destination": "/index.html" }
   ]
 }
