--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,8 @@
 {
-  "rewrites": [
-    { "source": "/((?!sitemap.xml|robots.txt|manifest.json|static/.*).*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "/sitemap.xml", "dest": "/sitemap.xml" },
+    { "src": "/robots.txt", "dest": "/robots.txt" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
