--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,6 @@
 {
   "routes": [
-    { "src": "/sitemap.xml", "dest": "/sitemap.xml" },
-    { "src": "/robots.txt", "dest": "/robots.txt" },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
