disable unicode-bom eslint rule

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,6 +4,7 @@
     "no-unused-vars": "off",
     "react-hooks/exhaustive-deps": "off",
     "no-dupe-keys": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "unicode-bom": "off"
   }
 }
