--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,7 @@
 {
-  "headers": [
-    {
-      "source": "/sitemap.xml",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/xml; charset=utf-8"
-        }
-      ]
-    },
-    {
-      "source": "/robots.txt",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/plain; charset=utf-8"
-        }
-      ]
-    }
-  ],
   "rewrites": [
-    { "source": "/((?!sitemap\\.xml$|robots\\.txt$|static/|manifest\\.json$|favicon\\.ico$).*)", "destination": "/index.html" }
+    { "source": "/sitemap.xml", "destination": "/api/sitemap.xml" },
+    { "source": "/robots.txt", "destination": "/api/robots.txt" },
+    { "source": "/((?!api/).*)", "destination": "/index.html" }
   ]
 }
